--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,14 @@
   "name": "andreyryabin/sprint.migration",
   "description": "migration module for 1C-Bitrix",
   "homepage": "http://marketplace.1c-bitrix.ru/solutions/sprint.migration/",
+  "type": "bitrix-module",
   "keywords": [
     "bitrix",
     "migration"
   ],
   "license": "MIT",
   "require": {
-    "php": ">=5.3.0"
+    "php": ">=5.3.0",
+    "composer/installers": "~1"
   }
 }
