--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "require": {
     "php": ">=5.4.0",
-    "composer/installers": "~1"
+    "composer/installers": "~1",
+    "ext-json": "*"
   }
 }
