--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
   "require": {
     "php": ">=5.4.0",
     "composer/installers": "~1",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-iconv": "*"
   }
 }
