--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "andreyryabin/sprint.migration",
   "description": "bitrix migration module",
-  "homepage": "http://marketplace.1c-bitrix.ru/solutions/sprint.migration/",
+  "homepage": "https://marketplace.1c-bitrix.ru/solutions/sprint.migration/",
   "type": "bitrix-module",
   "keywords": [
     "bitrix",
@@ -19,7 +19,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.4",
     "composer/installers": "~1",
     "ext-json": "*",
     "ext-iconv": "*"
