--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
   "require": {
     "php": ">=8.1",
     "composer/installers": "^1.0|^2.0",
+    "psr/log": "^2.0",
     "ext-json": "*",
     "ext-xmlreader": "*",
     "ext-xmlwriter": "*"
